[package]
name = "teleposta"
version = "0.1.0"
description = "Sends a message to a Telegram channel using a bot API"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
frankenstein = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unescape = "0.1.0"

[dev-dependencies]
assert_cmd = "2.0"
